--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <section class="product"> 
       <h2 class="product-category">MODEL NFT</h2>
-      <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
-      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
+      <!-- <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
+      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button> -->
 
       <div class="product-container">
           <div class="product-card">
