commit on 'origin'

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <section class="product"> 
       <h2 class="product-category">MODEL NFT</h2>
-      <!-- <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
-      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button> -->
+      <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
+      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
 
       <div class="product-container">
           <div class="product-card">
@@ -161,6 +161,12 @@
           <source src="vidd.mp4" type="video/mp4">
         </video>
       </div>
+
+      <div>
+        <video  controls  autoplay muted>
+          <source src="viddd.mp4" type="video/mp4">
+        </video>
+      </div>
         
       <div> 
         <img src="1.jpg"   >
@@ -206,13 +212,13 @@
 
       <div>
         <video controls  autoplay muted>
-          <source src="vid.mp4" type="video/mp4">
+          <source src="" type="video/mp4">
         </video>
       </div>
 
       <div>
         <video  controls  autoplay muted>
-          <source src="vidd.mp4" type="video/mp4">
+          <source src="" type="video/mp4">
         </video>
       </div>
         
