--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Contact </a></li>
                 </ul>
             </div>
 
@@ -60,8 +60,8 @@
 
     <section class="product"> 
       <h2 class="product-category">MODEL NFT</h2>
-      <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
-      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
+      <!-- <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
+      <button class="nxt-btn"><img src="images/arrow.png" alt=""></button> -->
 
       <div class="product-container">
           <div class="product-card">
